@startuml

class "BuildClassDiagramTask" {
  extension : ClassDiagramExtension
  metaClass : MetaClass
  execute()
  getProperty(String) : Object
  invokeMethod(String, Object) : Object
}

class "ClassDiagram"

class "ClassDiagramExtension" {
  components : List<Component>
  metaClass : MetaClass
  component(Closure)
  getProperty(String) : Object
  invokeMethod(String, Object) : Object
  setProperty(String, Object)
  this$dist$get$1(String) : Object
  this$dist$invoke$1(String, Object) : Object
  this$dist$set$1(String, Object)
}

interface "Classes" {
  list() : List<Class<?>>
}

class "ClsFiltered" {
  ignored : Classes
  list() : List<Class<?>>
}

class "ClsInPackage" {
  packageName : String
  classGraph : ClassGraph
  list() : List<Class<?>>
}

class "ClsWithLog" {
  prefix : String
  logger : Logger
  list() : List<Class<?>>
}

class "ClsWithNames" {
  names : List<String>
  classLoader : ClassLoader
  list() : List<Class<?>>
}

class "CompileClasspathUrls" {
  super$2$$getStaticMetaClass() : MetaClass
}

class "Component" {
  packageName : String
  outputFile : File
  ignoredClasses : List<String>
  metaClass : MetaClass
  getProperty(String) : Object
  invokeMethod(String, Object) : Object
  methodMissing(String, Object) : Object
  propertyMissing(String) : Object
  propertyMissing(String, Object)
  setProperty(String, Object)
}

interface "CustomTask" {
  execute()
}

interface "Diagram" {
  content() : String
  print(File)
}

class "DiagramWithLog" {
  logger : Logger
  print(File)
}

class "FilesUrls" {
  files : Set<File>
  metaClass : MetaClass
  getProperty(String) : Object
  invokeMethod(String, Object) : Object
  setProperty(String, Object)
  toList() : List<URL>
}

class "InvalidPackageException"

class "LoggableUrls" {
  prefix : String
  logger : Logger
  super$2$$getStaticMetaClass() : MetaClass
  super$2$toList() : List
  toList() : List<URL>
}

class "MainOutputUrls" {
  super$2$$getStaticMetaClass() : MetaClass
}

class "MergedUrls" {
  urls : List<Urls>
  metaClass : MetaClass
  getProperty(String) : Object
  invokeMethod(String, Object) : Object
  setProperty(String, Object)
  toList() : List<URL>
}

class "PlantUmlPlugin" {
  metaClass : MetaClass
  apply(Object)
  apply(Project)
  getProperty(String) : Object
  invokeMethod(String, Object) : Object
  setProperty(String, Object)
}

class "Simple" {
  classes : List<Class<?>>
  list() : List<Class<?>>
}

interface "Urls" {
  toList() : List<URL>
}

abstract class "Wrap" {
  origin : Classes
  list() : List<Class<?>>
}

class "_toList_closure1" {
  call(File) : Object
  doCall(File) : Object
}

"BuildClassDiagramTask" --> "ClassDiagramExtension" : extension
"ClassDiagramExtension" --> "*" "Component" : components
"Classes" <-> "ClsFiltered" : /ignored
"Classes" <|-- "ClsInPackage"
"Classes" <|-- "ClsWithLog"
"Classes" <|-- "ClsWithNames"
"Classes" <|-- "Simple"
"Classes" <-> "Wrap" : /origin
"CustomTask" <|-- "BuildClassDiagramTask"
"Diagram" <|-- "ClassDiagram"
"Diagram" <|-- "DiagramWithLog"
"Urls" <|-- "CompileClasspathUrls"
"Urls" <|-- "FilesUrls"
"Urls" <|-- "LoggableUrls"
"Urls" <|-- "MainOutputUrls"
"Urls" "*" <-> "MergedUrls" : /urls
"Wrap" <|-- "ClassDiagram"
"Wrap" <|-- "ClsFiltered"
"Wrap" <|-- "ClsWithLog"
"Wrap" <|-- "CompileClasspathUrls"
"Wrap" <|-- "DiagramWithLog"
"Wrap" <|-- "LoggableUrls"
"Wrap" <|-- "MainOutputUrls"

@enduml